# airtable-url-cli-rust

./: .env.example  .gitignore  Cargo.toml  README.md
src/: client.rs  config.rs  error.rs  main.rs
